<resources>
    <string name="app_name">Solar Panel Controller</string>

    <string name="title_activity_solar_panel">Solar Panel</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_settings">Settings</string>
    <string name="sunrise_label">Sunrise:&#160;</string>
    <string name="sunset_label">Sunset:&#160;</string>
    <string name="sun_label">Sun</string>
    <string name="sun_azimuth_label">Azimuth:&#160;</string>
    <string name="sun_height_label">Height:&#160;</string>
    <string name="system_status_title">System status</string>
    <string name="horizontal_axis_label">Horizontal position:</string>
    <string name="vertical_axis_label">Vertical position:</string>
    <string name="system_message_title">System messages</string>
    <string name="zero_degree">0&#176;</string>
    <string name="zero_hour">00:00 h</string>
    <string name="standby">Waiting...</string>
    <string name="heading_label">Heading:</string>
</resources>
